# rw_sync

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  log.txt  secrets  todo
include/: config.hpp  reader.hpp  shared_data.hpp  writer.hpp
src/: main.cpp  reader.cpp  shared_data.cpp  tmp.cpp  writer.cpp
tests/: test.cpp
